mocker veiledertilgangskontroll og håndterer feil ved tilgang